--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
         <h1>2048</h1>
         <div id="score">分數: <span id="score-value">0</span></div>
         <div id="game-board"></div>
-        <button id="new-game">新遊戲</button>
+        <button id="newGameButton">新遊戲</button>
+        <div class="direction-buttons">
+          <button id="upButton">↑</button>
+          <div class="horizontal-buttons">
+            <button id="leftButton">←</button>
+            <button id="rightButton">→</button>
+          </div>
+          <button id="downButton">↓</button>
+        </div>
     </div>
     <script src="model.js"></script>
     <script src="view.js"></script>
